sandbox/output
StringCalculatorTest.java:32: error: cannot find symbol
        int result = sc.Add(input);
                       ^
  symbol:   method Add(String)
  location: variable sc of type StringCalculator
1 error
